--- a/src/interfaz/Hardware.form
+++ b/src/interfaz/Hardware.form
@@ -5,6 +5,7 @@
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="c1" green="6a" red="0" type="rgb"/>
     </Property>
+    <Property name="requestFocusEnabled" type="boolean" value="false"/>
   </Properties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -33,8 +34,8 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="Publicar" max="32767" attributes="0"/>
                           <Component id="Soluciones" max="32767" attributes="0"/>
+                          <Component id="Publicar" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -122,7 +123,7 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jLabelPublicar" alignment="0" pref="34" max="32767" attributes="0"/>
+              <Component id="jLabelPublicar" alignment="0" pref="35" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
