--- a/src/interfaz/Bienvenida.form
+++ b/src/interfaz/Bienvenida.form
@@ -136,6 +136,10 @@
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="panelHardwareMouseEntered"/>
+        <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="panelHardwareMouseExited"/>
+      </Events>
 
       <Layout>
         <DimensionLayout dim="0">
